--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -643,6 +643,10 @@ div#collection-grid dl.item  > dt {
   height: 150px;
 }
 
+div#collection-grid.homepage dl.item  > dt {
+  height: 265px;
+}
+
 div#collection-grid dl.item  > dd {
   margin-left: 0;
 }
@@ -828,7 +832,7 @@ div.paginator > span > strong {
   border-left-style: none;
   position: relative;
   top: 2px;
-  right: 6px;
+  right: 9px;
   padding: 9px;
   width: 18%;
   height: 38px;
@@ -868,7 +872,7 @@ div#searchform input {
   padding-left: 10px;
   width: 60%;
   position: relative;
-  right: 3px;
+  right: 4px;
 }
 
 div.slider-section {
